Update styles and icons

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <div class="brick-pattern brick-pattern-5"></div>
     </div>
 
+    <div class="floating-elements"></div>
+
     <header class="header">
         <nav class="nav">
             <div class="logo">
@@ -45,12 +47,6 @@
                     <a href="#contacts" class="btn btn-primary">Связаться</a>
                     <a href="#portfolio" class="btn btn-secondary">Портфолио</a>
                 </div>
-            </div>
-            <div class="floating-elements">
-                <div class="floating-brick brick-1"></div>
-                <div class="floating-brick brick-2"></div>
-                <div class="floating-brick brick-3"></div>
-                <div class="floating-brick brick-4"></div>
             </div>
         </section>
 
